// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-9womup soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="c-esct9x soui-switch-indicator"
  />
  <div
    class="c-kk3avf soui-switch-content"
  >
    <div
      class="c-9yikgw soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-9womup soui-switch-wrapper c-oyxg2w soui-switch-wrapper-checked c-doa0ph soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    >
      <div
        class="c-uq6bd4 soui-switch-loading"
      />
    </div>
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-9womup soui-switch-wrapper c-doa0ph soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    >
      <div
        class="c-uq6bd4 soui-switch-loading"
      />
    </div>
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-9womup soui-switch-wrapper c-451kp4 soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    />
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-9womup soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    />
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-9womup soui-switch-wrapper c-493g7o soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    />
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-9womup soui-switch-wrapper c-oyxg2w soui-switch-wrapper-checked c-doa0ph soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    />
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-9womup soui-switch-wrapper c-doa0ph soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="c-esct9x soui-switch-indicator"
    />
    <div
      class="c-kk3avf soui-switch-content"
    >
      <div
        class="c-9yikgw soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
